# nn-zero-to-hero-follow-through

./: .gitignore  CLAUDE.md  README.md  main.py  micrograd_from_scratch_yay.ipynb  pyproject.toml
